<resources>
    <string name="app_name">MakeupDrawer</string>
    <string name="title_collection">Collection</string>
    <string name="title_collection_makeup">Makeup Collection</string>
    <string name="title_collection_skincare">Skincare Collection</string>
    <string name="title_expiring">Expiring</string>
    <string name="title_expiring_makeup">Makeup Expiring</string>
    <string name="title_expiring_skincare">Skincare Expiring</string>
    <string name="title_wishlist">Wish List</string>
    <string name="title_wishlist_makeup">Makeup Wish List</string>
    <string name="title_wishlist_skincare">Skincare Wish List</string>
    <string name="makeup_tab">Makeup</string>
    <string name="skincare_tab">Skincare</string>
    <string name="brand_field">Brand Name</string>
    <string name="product_field">Product Name</string>
    <string name="shade_field">Shade</string>
    <string name="purchase_field">Purchase Date</string>
    <string name="lifespan_field">Lifespan</string>
    <string name="new_item">Add Item</string>
    <string name="create">Create A New Item</string>
    <string name="question_title">What does this mean?</string>
    <string name="question1">Almost every cosmetic product has a picture that looks like this on the packaging:</string>
    <string name="question2">This is the shelf life of the product after it is opened. It is representative of the number of months product is good for.</string>
    <string name="question3">If you don\'t know - don\'t worry! We have some predetermined lengths that types of products are generally good for, it\'s just always best to try to use a products specific shelf life.</string>

    <string-array name="makeup_types">
        <item>BB and CC Cream</item>
        <item>Blush</item>
        <item>Bronzer</item>
        <item>Concealer</item>
        <item>Contour</item>
        <item>Eye Primer</item>
        <item>Eyebrow</item>
        <item>Eyeliner</item>
        <item>Eyeshadow</item>
        <item>Face Primer</item>
        <item>False Lashes</item>
        <item>Foundation</item>
        <item>Highlighter</item>
        <item>Lip Gloss</item>
        <item>Lip Liner</item>
        <item>Lip Stain</item>
        <item>Lipstick</item>
        <item>Liquid Lipstick</item>
        <item>Mascara</item>
        <item>Setting Powder</item>
        <item>Setting Spray</item>
        <item>Tinted Moisturizer</item>
    </string-array>
</resources>
