<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="325dp"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/question_title"
            android:textAlignment="textStart"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/ib_close"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:src="@drawable/close" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="107dp"
            android:text="@string/question1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/lifespan" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="409dp"
        android:layout_height="73dp"
        android:text="@string/question2"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:text="@string/question3"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>